--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,11 @@ jobs:
           distribution: temurin
           java-version: 17
 
+      - name: Setup SBT
+        uses: olafurpg/setup-sbt@v1
+        with:
+          java-version: 17
+
       - name: Cache sbt
         uses: actions/cache@v4
         with:
